<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView
	android:id="@+id/detailFragment"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	app:layoutManager="android.support.v7.widget.LinearLayoutManager"
	xmlns:android="http://schemas.android.com/apk/res/android">

</android.support.v7.widget.RecyclerView>