<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/top_and_bottom_padding"
	android:paddingTop="@dimen/top_and_bottom_padding">

	<LinearLayout
		android:id="@+id/buttonContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingStart="8dp"
		android:paddingEnd="8dp"
		android:layout_alignParentBottom="true">

		<Button
			android:id="@+id/previousStep"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginEnd="4dp"
			android:layout_marginStart="4dp"
			android:text="@string/previous_step" />

		<Button
			android:id="@+id/nextStep"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginEnd="4dp"
			android:layout_marginStart="4dp"
			android:text="@string/next_step"
			/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentTop="true"
		android:layout_above="@id/buttonContainer">

		<com.google.android.exoplayer2.ui.SimpleExoPlayerView
			android:id="@+id/playerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>

		<ScrollView
			android:id="@+id/descriptionScrollView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingStart="16dp"
			android:paddingEnd="16dp">

			<TextView
				android:id="@+id/description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="Description text" />
		</ScrollView>
	</LinearLayout>

</RelativeLayout>